--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,7 @@
 <h2>Add New Post</h2>
 
 <p>
-<form>
+<forma action="/new" method="POST">
   <div class="form-group">
     <textarea class="form-control" rows="6"></textarea>
   </div>
