--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
 <p>
 <forma action="/new" method="POST">
   <div class="form-group">
-    <textarea class="form-control" rows="6"></textarea>
+    <textarea class="form-control" rows="6" placeholder="Type post text here"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
