--- a/views/new.erb
+++ b/views/new.erb
@@ -1,10 +1,13 @@
 <h2>Add New Post</h2>
 
 <p>
-<forma action="/new" method="POST">
+  <form action="/new" method="POST">
   <div class="form-group">
-    <textarea class="form-control" rows="6" placeholder="Type post text here"></textarea>
+    <textarea name="content" class="form-control" rows="6" placeholder="Type post text here" style="width: 400px"></textarea>
   </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
+
 </form>
 </p>
+
