--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 		Added at <%= post['created_date'] %>
 	<br />
 	<br />
-		<a herf="/post/<%= post['id'] %>">Comments</a>
+		<a href="/details/<%= details['id'] %>">Comments</a>
 	</p>
 	<hr />
 <% end %>
